# Study_Buddy_Planner

./: .gitignore  Dockerfile  Jenkinsfile  app.py  application.py  pyproject.toml  requirements.txt
manifests/: deployment.yaml  service.yaml
src/config/: settings.py
src/generator/: question_generator.py
src/llm/: groq_client.py
src/models/: questions_schemas.py
src/utils/: helpers.py
